# ocaml-webrtc

./: .gitignore  .ocamlformat  CHANGELOG.md  LICENSE  Makefile  README.md  buffer_pool.ml  buffer_pool.mli  crc32c_stubs.c  dcep.ml  dcep.mli  dtls.ml  dtls.mli  dtls_codec.ml  dtls_codec.mli  dtls_crypto.ml  dtls_crypto.mli  dtls_eio.ml  dtls_eio.mli  dtls_functor.ml  dtls_functor.mli  dtls_handshake_client.ml  dtls_handshake_client.mli  dtls_handshake_server.ml  dtls_handshake_server.mli  dtls_io.ml  dtls_io.mli  dtls_record.ml  dtls_record.mli  dtls_retransmit.ml  dtls_retransmit.mli  dtls_sctp_transport.ml  dtls_sctp_transport.mli  dtls_srtp.ml  dtls_srtp.mli  dtls_types.ml  dtls_types.mli  dune  dune-project  ecdhe.ml  (+86 more)
.github/workflows/: ci.yml  format.yml
docs/: API.md  CORE-MEDIA-PLAN.md  ERROR-CONTRACT.md  INTEROP-STATUS-2026-01-25.md  ISOLATION-SEMANTICS.md  MEDIA-WORKER-INTERFACE.md  PERFORMANCE-OPTIMIZATION.md  PRODUCTION-READY.md  README.md  RFC-COMPLIANCE.md  RFC-TEST-PLAN.md
examples/: browser_media_smoke.ml  datachannel.ml  dtls_echo.ml  dune  eio_datachannel.ml  ice_gathering.ml  log.ml  media_loopback.ml  stun_client.ml
test/: absolute_trace.ml  ack_trace.ml  addr_trace.ml  boundary_trace.ml  buffer_pool_test.ml  bundling_benchmark.ml  burst_trace.ml  capped_cwnd_trace.ml  cwnd_analysis.ml  dcep_test.ml  dtls_handshake_test.ml  dtls_srtp_test.ml  dual_stats_trace.ml  dune  eio_concurrent_benchmark.ml  eio_sctp_benchmark.ml  eio_udp_benchmark.ml  fast_rtx_trace.ml  fault_injection.ml  fault_injection_test.ml  fine_trace.ml  flight_trace.ml  full_path_profile.ml  full_sctp_benchmark.ml  full_stats_trace.ml  gap_origin_trace.ml  gap_trace.ml  harness_integration_test.ml  honest_benchmark.ml  honest_blocking_benchmark.ml  ice_check_test.ml  ice_trickle_test.ml  immediate_trace.ml  integration_test.ml  lifecycle_test.ml  loop_timing.ml  moment_trace.ml  network_benchmark.ml  no_shell_test.ml  oas_error_test.ml  (+42 more)
