; Auto-generate c_flags.sexp based on CPU architecture
; ARM64 (Apple Silicon): use CRC instructions
; x86_64: use SSE4.2 for CRC32

(rule
 (targets c_flags.sexp)
 (action
  (with-stdout-to
   %{targets}
   (run
    sh
    -c
    "if [ \"$(uname -m)\" = 'arm64' ] || [ \"$(uname -m)\" = 'aarch64' ]; then echo '(-march=armv8-a+crc)'; else echo '(-msse4.2)'; fi"))))

(library
 (name webrtc)
 (public_name ocaml-webrtc)
 (synopsis "Pure OCaml WebRTC implementation")
 (instrumentation
  (backend bisect_ppx))
 (libraries
  ; Core
  unix
  str
  cstruct
  ; Crypto
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng.unix ; RNG initialization (subpackage)
  mirage-crypto-ec ; ECDHE key exchange (RFC 8422)
  digestif
  x509
  tls.unix
  ptime.clock.os
  ; Networking
  ipaddr
  ; Async (optional, for Eio backend)
  eio
  eio_posix
  ; Time compatibility from mcp-protocol-sdk
  mcp_protocol_eio)
 ; C stubs for hardware-accelerated CRC32c (ARM64/x86_64)
 (foreign_stubs
  (language c)
  (names crc32c_stubs)
  (flags
   (:standard
    (:include c_flags.sexp))))
 (flags
  (:standard -w +a-4-32-40-41-42-44-45-60-69-70
             -warn-error +a-4-32-40-41-42-44-45-60-69-70))
 ; Warn-error: all non-suppressed warnings are promoted to errors.
 ; Suppressed warnings (each justified):
 ; W4:  fragile-match — wildcard matches on state enums are intentional
 ; W32: unused-value-declaration — library API surface awaiting consumers
 ; W40: unused-constructor — library exposes variants for downstream use
 ; W41: ambiguous-name — remaining cases after type annotations are safe
 ; W42: disambiguated-name — OCaml 4.x compat noise, we target 5.1+
 ; W44: open-shadow-identifier — normal module open patterns
 ; W45: open-shadow-label — normal module open patterns
 ; W60: unused-module — library submodules are public API
 ; W69: unused-field — public API record fields awaiting consumers
 ; W70: missing-mli — ppx-generated files lack .mli
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))
