; WebRTC Example Programs

(executable
 (name stun_client)
 (libraries webrtc unix))

(executable
 (name ice_gathering)
 (libraries webrtc unix lwt lwt.unix))

(executable
 (name dtls_echo)
 (libraries webrtc unix))

(executable
 (name datachannel)
 (libraries webrtc unix lwt lwt.unix))

(executable
 (name eio_datachannel)
 (libraries webrtc eio eio_main eio_posix unix))
