; WebRTC Example Programs

; Simple logging module for examples
(library
 (name log)
 (modules log))

(executable
 (name stun_client)
 (modules stun_client)
 (libraries log webrtc unix))

; REMOVED: ice_gathering.ml uses Lwt (use eio_datachannel instead)
; (executable
;  (name ice_gathering)
;  (libraries webrtc unix lwt lwt.unix))

(executable
 (name dtls_echo)
 (modules dtls_echo)
 (libraries log webrtc unix))

(executable
 (name media_loopback)
 (modules media_loopback)
 (libraries log webrtc unix))

(executable
 (name browser_media_smoke)
 (modules browser_media_smoke)
 (libraries log webrtc unix))

; REMOVED: datachannel.ml uses Lwt (use eio_datachannel instead)
; (executable
;  (name datachannel)
;  (libraries webrtc unix lwt lwt.unix))

(executable
 (name eio_datachannel)
 (modules eio_datachannel)
 (libraries log webrtc eio eio_main eio_posix unix))
